--- a/NotificatorMobile/AppShell.xaml
+++ b/NotificatorMobile/AppShell.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:NotificatorMobile"
     xmlns:pages="clr-namespace:NotificatorMobile.Pages"
-    Shell.FlyoutBehavior="Flyout"
+    Shell.FlyoutBehavior="Disabled"
     Title="NotificatorMobile">
 
     <ShellContent
