--- a/NotificatorMobile/Pages/MainPage.xaml
+++ b/NotificatorMobile/Pages/MainPage.xaml
@@ -2,5 +2,6 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NotificatorMobile.Pages.MainPage"
-             BackgroundColor="Gainsboro">
+             BackgroundColor="Gainsboro"
+             Title="Notifications">
 </ContentPage>
