--- a/NotificatorMobile/Pages/MainPage.xaml
+++ b/NotificatorMobile/Pages/MainPage.xaml
@@ -2,6 +2,5 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="NotificatorMobile.Pages.MainPage"
-             BackgroundColor="Gainsboro"
-             Title="Notifications">
+             BackgroundColor="Gainsboro">
 </ContentPage>
